tick mark added in list style

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
             <section >
                 <div class="failure">
                     <div class="person">
-                        <img src="styles/images/person.png" alt="person">
+                        <img src="images/person.png" alt="person">
                     </div>
     
                     <div class="failure-container">
